# git-actually-dogfood

./: .gitignore  .mission-state.json  CONFLICT_PRACTICE.md  CONTRIBUTING.md  GUIDE.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check_mission.py
.github/scripts/checks/: mission_00.py  mission_01.py  mission_02.py  mission_03.py  mission_04.py  mission_05.py  mission_06.py  mission_07.py  mission_08.py  mission_09.py  mission_10.py  mission_11.py  mission_12.py  mission_13.py  mission_14.py  mission_15.py
.github/scripts/lib/: gh_api.py  git_inspect.py
.github/workflows/: ci.yml  mission-check.yml
missions/: 00-setup.md  01-first-real-commit.md  02-branch-and-merge.md  03-merge-conflict.md  04-open-a-pr.md  05-ci-on-your-pr.md  06-code-review.md  07-merge-and-cleanup.md  08-matrix-builds.md  09-caching-and-second-check.md  10-build-artifacts.md  11-environments-and-secrets.md  12-staging-deploy.md  13-production-deploy.md  14-reusable-workflow.md  15-capstone.md
src/relnotes/: __init__.py  cli.py  core.py  render.py
tests/: test_cli.py  test_core.py  test_render.py
