[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relnotes"
version = "0.1.0"
description = "Track and render release notes / changelog entries for a project."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "TechNaom" }
]

[project.scripts]
relnotes = "relnotes.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["relnotes"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
